<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstPost"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:background="@drawable/edittextstyle">

    <TextView
        android:id="@+id/categoryPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dataPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/time"
        app:layout_constraintStart_toEndOf="@+id/categoryPost"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titlePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@+id/dataPost"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/likePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/like"
        app:layout_constraintStart_toEndOf="@+id/titlePost"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryPost" />

    <ImageView
        android:id="@+id/imagePost"
        android:layout_width="0dp"
        android:layout_height="128dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/picturespost"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionPost"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/commentsPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableStart="@android:drawable/sym_action_chat"
        android:text="@string/comments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePost" />
</androidx.constraintlayout.widget.ConstraintLayout>